yanwi savse yanwi

--- a/src/main/resources/assets/geocraft/lang/en_us.json
+++ b/src/main/resources/assets/geocraft/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.geocraft.khinkali": "khinkali",
-  "item.geocraft.grape": "grape"
+  "item.geocraft.grape": "grape",
+  "item.geocraft.yanwi": "yanwi",
+  "item.geocraft.yanwi_savse": "savse yanwi"
 }
