--- a/src/main/resources/assets/geocraft/lang/en_us.json
+++ b/src/main/resources/assets/geocraft/lang/en_us.json
@@ -2,5 +2,6 @@
   "item.geocraft.khinkali": "khinkali",
   "item.geocraft.grape": "grape",
   "item.geocraft.yanwi": "yanwi",
-  "item.geocraft.yanwi_savse": "savse yanwi"
+  "item.geocraft.yanwi_savse": "savse yanwi",
+  "item.geocraft.svanuri_qudi": "Svanuri Qudi"
 }
