--- a/src/main/resources/assets/geocraft/lang/en_us.json
+++ b/src/main/resources/assets/geocraft/lang/en_us.json
@@ -3,6 +3,6 @@
   "item.geocraft.grape": "grape",
   "item.geocraft.yanwi": "yanwi",
   "item.geocraft.yanwi_savse": "savse yanwi",
-  "item.geocraft.svanuri_qudi": "Svanuri Qudi",
-  "item.geocraft.svanuri_phari": "Svanuri Phari"
+  "item.geocraft.svanuri_qudi": "svanuri qudi",
+  "item.geocraft.svanuri_phari": "georgian shield"
 }
