--- a/src/main/resources/assets/geocraft/lang/en_us.json
+++ b/src/main/resources/assets/geocraft/lang/en_us.json
@@ -4,5 +4,6 @@
   "item.geocraft.yanwi": "yanwi",
   "item.geocraft.yanwi_savse": "savse yanwi",
   "item.geocraft.svanuri_qudi": "svanuri qudi",
-  "item.geocraft.svanuri_phari": "georgian shield"
+  "item.geocraft.svanuri_phari": "georgian shield",
+  "block.geocraft.khachapuri": "Khachapuri"
 }
