--- a/src/main/resources/assets/geocraft/lang/en_us.json
+++ b/src/main/resources/assets/geocraft/lang/en_us.json
@@ -5,5 +5,6 @@
   "item.geocraft.yanwi_savse": "savse yanwi",
   "item.geocraft.svanuri_qudi": "svanuri qudi",
   "item.geocraft.svanuri_phari": "georgian shield",
-  "item.geocraft.khachapuri": "Khachapuri"
+  "item.geocraft.khachapuri": "Khachapuri",
+  "item.geocraft.club": "Komble Club"
 }
