--- a/src/main/resources/assets/geocraft/lang/en_us.json
+++ b/src/main/resources/assets/geocraft/lang/en_us.json
@@ -6,5 +6,6 @@
   "item.geocraft.svanuri_qudi": "svanuri qudi",
   "item.geocraft.svanuri_phari": "georgian shield",
   "item.geocraft.khachapuri": "Khachapuri",
-  "item.geocraft.club": "Komble Club"
+  "item.geocraft.club": "Komble Club",
+  "item.geocraft.gorgasali_sword": "Gorgasali Sword"
 }
